--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Se connecter {% endblock %}</h1>
+  <h5>Se connecter</h5>
 {% endblock %}
 
 {% block content %}
