--- a/app/templates/home/indexco.html
+++ b/app/templates/home/indexco.html
@@ -4,9 +4,9 @@
 
 
 {% block content %}
-  <div class="welcome-box">
-    <p>Bienvenue sur votre gestionnaire d'investissement</p>
-  </div>
+  
+    <h5>Bienvenue sur votre gestionnaire d'investissement</h5>
+  
   <div id="container3D"></div>
 
 
