--- a/app/templates/Add_Type/Choose_type.html
+++ b/app/templates/Add_Type/Choose_type.html
@@ -21,7 +21,7 @@
             <button type="submit" name="selected_type" value="Compte">Compte</button>
             <button type="submit" name="selected_type" value="Cryptomonnaie">Cryptomonnaie</button>
             <button type="submit" name="selected_type" value="Immeuble">Immeuble</button>
-            <button type="submit" name="selected_type" value="Obligation">Obligatio </button>    
+            <button type="submit" name="selected_type" value="Obligation">obligation</button>    
         </form>
     </div>
 </body>
