--- a/app/templates/home/indexco.html
+++ b/app/templates/home/indexco.html
@@ -5,7 +5,7 @@
 
 {% block content %}
   
-    <h5>Bienvenue sur votre gestionnaire d'investissement</h5>
+    <h5>Bienvenue sur votre gestionnaire d'investissement, {{ g.user.Prenom }}</h5>
   
   <div id="container3D"></div>
 
@@ -13,7 +13,7 @@
 
   
   <section class="display-box">
-    
+    <h4>Utilisez le menu latéral pour naviguer dans l'application</h4>
   </section>
 
 
