--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -34,6 +34,7 @@ h4 {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    text-decoration: none;
 }
 
 h2, h5 {
@@ -41,8 +42,18 @@ h2, h5 {
     text-align: center;
 }
 
+.header-nav a:visited {
+    color: #333333; /* Couleur pour les liens visités */
+}
+
+.header-nav a:hover {
+    color: #555555; /* Couleur au survol */
+}
+
+
 /* styles pour le titre MALLFUND */
 h1#mallfund-title {
+    
     font-size: 40px; /* taille police */
     margin: 20px 220px; /* marge */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* ombre au texte */
@@ -109,7 +120,7 @@ body {
     border: 2px solid #333; /* Couleur de bordure plus vive */
     border-radius: 5px; /* Bordures légèrement arrondies pour un look moderne */
     color: #fff; /* Couleur de texte blanche pour contraste */
-    background-color: #333; /* Couleur de fond plus vive */
+    background-color: #e9e9e9; /* Couleur de fond plus vive */
     font-family: 'Helvetica', sans-serif; /* Gardez la police Helvetica */
     font-weight: bold; /* Texte en gras pour plus de présence */
     cursor: pointer; /* Changez le curseur au survol pour indiquer la possibilité de cliquer */
@@ -117,9 +128,9 @@ body {
 }
 
 .btn2:hover {
-    background-color: #555; /* Changement de couleur au survol pour un effet interactif */
+    background-color: #b9ffb6; /* Changement de couleur au survol pour un effet interactif */
     color: #fff; /* Assurez-vous que le texte reste lisible */
-    border-color: #555; /* La bordure change également au survol */
+    border-color: #b9ffb6; /* La bordure change également au survol */
 }
 
 
@@ -263,7 +274,18 @@ body {
     cursor: pointer;
     margin: 0 auto;
 }
-
+.testbuttonint a {
+    display : none;
+    width: 80%;
+    padding: 10px;
+    background-color: #45a049; /* Vert */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0 auto;
+   
+}
 .actif-detail:hover .actif-buttons {
     display: block; /* Affiche les boutons au survol */
 }
