--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,13 +1,22 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Profil de l'utilisateur connecté {% endblock %}</h1>
-{% endblock %}
-
 {% block content %}
-    <ul>
-        <li>Username: {{g.user.username}}</li>
-        <li>Password: {{g.user.password}}</li>
-    </ul>
+<body>
+  <h5>Profil de l'utilisateur connecté </h5>
+  
+  <form action="{{ url_for('user.updateuser') }}" method="post">
+    <label for="username">Adresse mail</label>
+    <input name="username" id="username" value="{{ g.user.AdresseMail }}" required>
+    <label for="password">Mot-de-passe</label>
+    <input type="password" name="password" id="password"  required>
+    <label for="Datedenaissance">Date de naissance :</label>
+    <input type="date" name="Datedenaissance" id="Datedenaissance" value="{{ g.user.DateNaissance }}" >
+    <label for="Nom">Nom</label>
+    <input type="Nom" name="Nom" id="Nom" value="{{ g.user.Nom }}"required>
+    <label for="Prenom">Prénom</label>
+    <input type="Prenom" name="Prenom" id="Prenom" value="{{ g.user.Prenom }}" required>
+    <input type="submit" class="btn" value="Modifier">
+  </form>
     
+</body>
 {% endblock %}
