--- a/app/templates/Add_Ap/NewAp.html
+++ b/app/templates/Add_Ap/NewAp.html
@@ -33,6 +33,9 @@
         <label for="Pieces">Pièces :</label>
         <input type="numeric" name="Pieces" required><br>
 
+        <label for="Surface">Surface :</label>
+        <input type="numeric" name="Surface" required><br>
+
         <!-- Case à cocher pour ajouter des champs supplémentaires -->
         <label for="Loué">Loué ?</label>
         <input type="checkbox" id="Loué" name="Loué">
@@ -42,7 +45,7 @@
         <input type="integer" name="Valeurlocative"><br>
 
         <label for="Valeur">Valeur :</label>
-        <input type="integer" name="Valeur"><br>
+        <input type="integer" name="Valeur" required><br>
 
         <label for="Frais">Frais généraux :</label>
         <input type="numeric" name="Frais"><br>
