--- a/app/templates/Add_Co/NewCo.html
+++ b/app/templates/Add_Co/NewCo.html
@@ -27,6 +27,12 @@
         <label for="Nom">Nom :</label>
         <input type="text" name="Nom" required><br>
 
+        <label for="banque">Banque :</label>
+        <input type="text" name="banque"><br>
+
+        <label for="type">Type :</label>
+        <input type="text" name="type"><br>
+
         <label for="Solde">Solde :</label>
         <input type="numeric" name="Solde" required><br>
 
