--- a/app/templates/Add_Cr/NewCr.html
+++ b/app/templates/Add_Cr/NewCr.html
@@ -28,6 +28,9 @@
         <label for="Nom">Nom :</label>
         <input type="text" name="Nom" required><br>
 
+        <label for="plateforme">IBAN :</label>
+        <input type="text" name="plateforme"><br>
+
         <label for="Symbole">Symbole :</label>
         <input type="text" name="Symbole" required><br>
 
