--- a/app/templates/Add_Ob/NewOb.html
+++ b/app/templates/Add_Ob/NewOb.html
@@ -42,6 +42,10 @@
         <label for="Taux">Taux d'intérêt :</label>
         <input type="numeric" name="Taux"><br>
 
+        
+        <label for="Dure">Duré de l'obligation (en nombre d'années) :</label>
+        <input type="integer" name="Dure"><br>
+
         <label for="FraisGarde">Frais de garde :</label>
         <input type="numeric" name="FraisGarde"><br>
 
